[package]
name = "ruvex_commands"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.8"
colored = "2.0.4"
prettytable-rs = "0.10"
ruvex_config = {path="../ruvex_config"}
ruvex_utils = {path="../ruvex_utils"}
thiserror = "1.0.40"
